fix: google image metadata
en las imágenes originales de la web

--- a/public/pages/common/faq.html
+++ b/public/pages/common/faq.html
@@ -41,8 +41,14 @@ Preguntas que yo ya sé que vas a hacer.
             "@context": "https://schema.org/",
             "@type": "ImageObject",
             "contentUrl": "https://record.rat.la/img/ratBbg.webp",
-            "license": "https://creativecommons.org/licenses/by-nc-sa/4.0/",
-            "acquireLicensePage": "https://record.rat.la/faq"
+            "license": "https://creativecommons.org/licenses/by-sa/4.0/",
+            "acquireLicensePage": "https://record.rat.la/faq#acquireLicense",
+            "creditText": "record.rat.la",
+            "creator": {
+                "@type": "Person",
+                "name": "@pepunto.reik"
+            },
+            "copyrightNotice": "Inoro"
         }
     </script>
 </p>
@@ -59,7 +65,7 @@ Preguntas que yo ya sé que vas a hacer.
     y posibilitando su futuro retorno al primer plano.
 </p>
 
-<h2>¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h2>
+<h2 id="acquireLicense">¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h2>
 
 <p>
     Todo el contenido multimedia que se muestra en esta página se encuentra bajo la licencia <a href="https://creativecommons.org/licenses/by-sa/4.0/" rel="nofollow">Creative Commons BY-SA 4.0</a>. Con contenido multimedia me refiero todos los textos, imágenes, vídeos y audios que puedas ver publicados aquí.
