--- a/public/pages/common/inoro.html
+++ b/public/pages/common/inoro.html
@@ -12,7 +12,22 @@
 </style>
 
 <p>
-    <img style="border-radius: 50%;" src="img/profile.webp" alt="Inoro profile" class="half">
+    <img style="border-radius: 50%;" src="img/profile.webp" alt="Inoro profile picture" class="half">
+    <script type="application/ld+json">
+        {
+            "@context": "https://schema.org/",
+            "@type": "ImageObject",
+            "contentUrl": "https://record.rat.la/img/profile.webp",
+            "license": "https://creativecommons.org/licenses/by-sa/4.0/",
+            "acquireLicensePage": "https://record.rat.la/faq#acquireLicense",
+            "creditText": "record.rat.la",
+            "creator": {
+                "@type": "Person",
+                "name": "Inoro"
+            },
+            "copyrightNotice": "Inoro"
+        }
+    </script>
 </p>
 
 <p>
