doc: mejorados los textos con respecto al uso de cookies

--- a/public/pages/common/faq.html
+++ b/public/pages/common/faq.html
@@ -1,5 +1,7 @@
-
 <h1>Preguntas frecuentes</h1>
+
+<!-- publication_datetime 20200918T0001 -->
+<!-- author inoro -->
 
 Preguntas que yo ya sé que vas a hacer.
 
@@ -65,6 +67,16 @@ Preguntas que yo ya sé que vas a hacer.
     y posibilitando su futuro retorno al primer plano.
 </p>
 
+<h2>¿Cómo puede ser que esta web utilice Cookies?</h2>
+
+<p>
+    Pues resulta que estoy interesado en experimentar con Google Analytics 4 y sus herramientas de espionaje. Así que si aceptas el magnifico <em>pop-up</em> de consentimiento me estarás dando una valiosa información sobre tus gustos y hábitos dentro de esta web 😈. 
+</p>
+
+<p>
+    Puedes leer mas detalladamente todas mis razones para utilizar esta tecnología del averno en <a href="/cookie">esta página</a>, donde también podrás encontrar la <a href="/cookie#politica_de_cookies">política de cookies de la web</a>.
+</p>
+
 <h2 id="acquireLicense">¿Puedo compartir, citar o copiar el contenido o la totalidad de un post?</h2>
 
 <p>
@@ -94,6 +106,12 @@ Preguntas que yo ya sé que vas a hacer.
     😉.
 </blockquote>
 
+<h2>¿En que zona horaria están las fechas de las publicaciones?</h2>
+
+<p>
+    Todas las fechas de la web están actualmente localizadas en la zona horaria <code>Europe/Madrid</code>. Si en el futuro esto se internacionaliza más podría plantearme el cambiarlo todo a <code>UTC</code>.
+</p>
+
 <h2>¿Qué software utilizas?</h2>
 
 <p>
@@ -107,6 +125,3 @@ Preguntas que yo ya sé que vas a hacer.
     electrónico. Si quieres preguntarme cualquier cosa no dudes en 
     escribirme. Estaré encantado de contestarte.
 </p>
-
-<!-- publication_datetime 20200918T0001 -->
-<!-- author inoro -->
