--- a/public/pages/common/cookie.html
+++ b/public/pages/common/cookie.html
@@ -1,10 +1,8 @@
+
 <h1>Sobre las Cookies</h1>
 
-<!-- publication_datetime 20221202T2257 -->
-<!-- author inoro -->
-
 <p>
-    Voy a intentar definir lo que yo creo que es una <em>cookie</em> sin mirar la Wikipedia. Y luego expondré, en un tono más serio, la <a href="#politica_de_cookies">política de cookies de la web</a>.
+    Voy a definir lo que yo creo que es una <em>cookie</em> sin mirar la Wikipedia.
 </p>
 
 <p>
@@ -30,11 +28,11 @@
 </p>
 
 <p>
-    ¿Que tal? ¿Bonita, verdad? Pues eso es lo que hago yo con mi web. La única <em>cookie</em> propia que guardo en tu ordenador es un número que me indica que consientes el uso de cookies, para poder activar Google Analitics, cosa de la que no estoy muy orgulloso.
+    ¿Que tal? ¿Bonita, verdad? Pues eso es lo que hago yo con mi web. La única <em>cookie</em> que guardo en tu ordenador es un número que me indica que paleta de colores quieres usar para leer mis artículos. El 0 me dice que quieres la paleta por defecto, el 2 que eres un darks (o un receloso de tu batería) y te gusta leer todo en negro, el 3 que eres un soso y solo quieres los colores como manda el navegador, etc.
 </p>
 
 <p>
-    Una vez activado se generan 3 cookies que hacen que Google recuerde quien eres y a mi me muestre unos gráficos muy chulos que describen a grandes rasgos la audiencia de la web. Esta decisión la tomé porque me gustaría aprender a utilizar esa funcionalidad y experimentar con ella. Si crees que soy malo y estoy atentando contra tus derechos fundamentales, por favor, házmelo saber.
+    Una cosa de la que no estoy muy orgulloso es de haber activado Google Analytics en esta web, lo cual genera 3 cookies que hacen que Google recuerde quien eres y a mi me muestre unos gráficos muy chulos sobre quién eres y que lees. Esta decisión la tomé porque me gustaría aprender a utilizar esa funcionalidad y experimentar con ella. Si crees que soy malo y estoy atentando contra tus derechos fundamentales, por favor, házmelo saber.
 </p>
 
 <p>
@@ -60,73 +58,5 @@ leer https://www.bbc.com/mundo/noticias-40443519
 
 -->
 
-<h2 id="politica_de_cookies">Política de cookies de record.rat.la</h2>
-
-<p>
-    En cumplimiento con lo dispuesto en el artículo 22.2 de la Ley 34/2002, de 11 de julio, de Servicios de la Sociedad de la Información y de Comercio Electrónico, esta página web le informa, en esta sección, sobre la política de recogida y tratamiento de cookies.
-</p>
-
-<h3>¿Qué son las cookies?</h3>
-
-<p>
-    Aunque ya lo expliqué al principio, lo repito: una cookie es un fichero que se descarga en su ordenador al acceder a determinadas páginas web. Las cookies permiten a una página web, entre otras cosas, almacenar y recuperar información sobre los hábitos de navegación de un usuario o de su equipo y, dependiendo de la información que contengan y de la forma en que utilice su equipo, pueden utilizarse para reconocer al usuario.
-</p>
-
-<h3>¿Qué tipos de cookies utiliza esta página web?</h3>
-
-<p>
-    Esta página web utiliza los siguientes tipos de cookies:
-</p>
-
-<p>
-    <strong>Cookies de análisis</strong> – Aquéllas que bien tratadas por esta web o por terceros, permiten cuantificar el número de usuarios y así realizar la medición y análisis estadístico de la utilización que hacen los usuarios del servicio ofertado. Para ello se analiza su navegación en la página web con el fin de mejorar la oferta de productos o servicios que se ofrecen.
-</p>
-
-<!-- <p>
-    <strong>Cookies técnicas</strong> – Aquellas que permiten al usuario la navegación a través del área restringida y la utilización de sus diferentes funciones, como por ejemplo, llevar a cabo el proceso de compra de un artículo.
-</p> -->
-
-<p>
-    <strong>Cookies de personalización</strong> – Aquellas que permiten al usuario acceder al servicio con algunas características de carácter general predefinidas en función de una serie de criterios en el terminal del usuario como por ejemplo serian el idioma, las preferencias de color o el tamaño de la letra, entre otros.
-</p>
-
-<!-- <p>
-    <strong>Cookies publicitarias</strong> – Aquéllas que, bien tratadas por esta web o por terceros, permiten gestionar de la forma más eficaz posible la oferta de los espacios publicitarios que hay en la página web, adecuando el contenido del anuncio al contenido del servicio solicitado o al uso que realice de nuestra página web. Para ello podemos analizar sus hábitos de navegación en Internet y podemos mostrarle publicidad relacionada con su perfil de navegación.
-</p> -->
-
-<!-- <p>
-    <strong>Cookies de publicidad comportamental</strong> – Aquellas que permiten la gestión, de la forma más eficaz posible, de los espacios publicitarios que, en su caso, el editor haya incluido en una página web, aplicación o plataforma desde la que presta el servicio solicitado. Este tipo de cookies almacenan información del comportamiento de los visitantes obtenida a través de la observación continuada de sus hábitos de navegación, lo que permite desarrollar un perfil específico para mostrar avisos publicitarios en función del mismo.
-</p> -->
-
-<h3>Desactivar las cookies</h3>
-
-<p>
-    Usted puede permitir, bloquear o eliminar las cookies instaladas en su equipo (por esta web) mediante los botones del <em>pop-up</em> de consentimiento o desde la configuración de las opciones del navegador instalado en su ordenador. En la mayoría de los navegadores web se ofrece la posibilidad de permitir, bloquear o eliminar las cookies instaladas en su equipo.
-</p>
-
-<p>
-    A continuación se facilitan unos enlaces a las páginas de soporte de algunos de los navegadores más populares, donde se explica cómo se puede lidiar con las cookies en cada uno:
-</p>
-
-<ul>
-    <li><a href="https://support.mozilla.org/es/kb/Deshabilitar%20cookies%20de%20terceros">Gestionar cookies en Mozilla Firefox</a></li>
-    <li><a href="https://support.google.com/chrome/answer/95647?hl=es">Gestionar cookies en Google Chrome</a></li>
-    <li><a href="https://support.apple.com/es-es/HT201265">Gestionar cookies en Safari</a></li>
-    <li><a href="https://support.microsoft.com/es-es/microsoft-edge/eliminar-las-cookies-en-microsoft-edge-63947406-40ac-c3b8-57b9-2a946a29ae09">Gestionar cookies en Microsoft Edge</a></li>
-</ul>
-
-<h3>Cookies de terceros</h3>
-
-<p>
-    Esta página utiliza servicios de terceros para recopilar información con fines estadísticos y de uso de la web. En concreto, usamos los servicios de Google Analytics 4.
-</p>
-
-<!-- <h3>Advertencia sobre eliminar cookies</h3>
-
-<p>
-    Usted puede eliminar y bloquear todas las cookies de este sitio, pero parte del sitio no funcionará o la calidad de la página web puede verse afectada.
-</p> -->
-
-<blockquote>
-    Si tiene cualquier duda acerca de la política de cookies, puede contactar a través de los canales de contacto ubicados en el <a href="#footer">footer</a>.
-</blockquote>
+<!-- publication_datetime 20200919T2256 -->
+<!-- author inoro -->
