style: img enclosed in figure & more little fixes

--- a/public/pages/common/404.html
+++ b/public/pages/common/404.html
@@ -5,8 +5,8 @@
     Parece que no hay nada por aquí...
 </p>
 
-<p>
+<figure>
     <img src="img/404.webp" alt="Yotsuba 404" class="half">
-</p>
+</figure>
 <!-- publication_datetime 20200918T0000 -->
 <!-- author anon -->
