--- a/public/pages/common/cookie.html
+++ b/public/pages/common/cookie.html
@@ -7,11 +7,11 @@
     Voy a intentar definir lo que yo creo que es una <em>cookie</em> sin mirar la Wikipedia. Y luego expondré, en un tono más serio, la <a href="#politica_de_cookies">política de cookies de la web</a>.
 </p>
 
-<p>
+<figure>
     <a title="Ir a la web de origen de la imagen." href="https://uxdesign.cc/did-you-know-that-the-free-cookie-clicker-can-explain-key-mechanics-for-freemium-services-bf5140a50c04">
         <img src="img/cookie.webp" alt="Imagen de cabecera, abuela con una cookie.">
     </a>
-</p>
+</figure>
 
 <blockquote>
     Una <em>cookie</em>, <strong>galleta</strong> en castellano, es un valor; un pequeño texto o un número que la página web guarda en tu PC para que la próxima vez que vuelvas a acceder a ella, esta pueda leer esa información. Normalmente haciendo que no tengas que volver a introducir datos, o guardando configuraciones que se cargarán automáticamente.
