--- a/public/pages/common/faq.html
+++ b/public/pages/common/faq.html
@@ -34,7 +34,7 @@ Preguntas que yo ya sé que vas a hacer.
 </p>
 
 <!-- Para evitar que el contenido se mueva al cargar la imagen puse "height: 180.47px;" al <p>, porque la imagen era de 400x180.47 -->
-<p>
+<figure>
     <a href="https://www.instagram.com/pepunto.reik" aria-label="Artista: @pepunto.reik">
         <img src="img/ratBbg.webp" alt="Logotipo de la web, una rata cantando: la la la.">
     </a>
@@ -53,7 +53,7 @@ Preguntas que yo ya sé que vas a hacer.
             "copyrightNotice": "Inoro"
         }
     </script>
-</p>
+</figure>
 
 <p>
     Esta imagen ilustra bien la chorrada en la que estaba pensando a la hora 
