--- a/public/pages/common/inoro.html
+++ b/public/pages/common/inoro.html
@@ -11,7 +11,7 @@
     h1 + p {display: none;}
 </style>
 
-<p>
+<figure>
     <img style="border-radius: 50%;" src="img/profile.webp" alt="Inoro profile picture" class="half">
     <script type="application/ld+json">
         {
@@ -28,7 +28,7 @@
             "copyrightNotice": "Inoro"
         }
     </script>
-</p>
+</figure>
 
 <p>
     Joven muchacho entusiasta de las redes, la programación y el mundo del 
