style: cambios en el estilo del footer y arreglado algunos posts

--- a/public/pages/common/faq.html
+++ b/public/pages/common/faq.html
@@ -109,7 +109,7 @@ Preguntas que yo ya sé que vas a hacer.
 <h2>¿En que zona horaria están las fechas de las publicaciones?</h2>
 
 <p>
-    Todas las fechas de la web están actualmente localizadas en la zona horaria <code>Europe/Madrid</code>. Si en el futuro esto se internacionaliza más podría plantearme el cambiarlo todo a <code>UTC</code>.
+    Todas las fechas de la web están actualmente localizadas en la zona horaria <samp>Europe/Madrid</samp>. Si en el futuro esto se internacionaliza más podría plantearme el cambiarlo todo a <samp>UTC</samp>.
 </p>
 
 <h2>¿Qué software utilizas?</h2>
