style: se actualiza la selección del párrafo para la descripción

--- a/public/pages/common/inoro.html
+++ b/public/pages/common/inoro.html
@@ -1,7 +1,7 @@
 
 <h1>Inoro</h1>
 
-<p>Página descriptiva sobre mi persona.</p>
+<p>Página descriptiva sobre el usuario Inoro, autor principal de esta web.</p>
 
 <!--
     trick para que no se muestre el primer <p> pero si que cuente para la 
@@ -36,7 +36,7 @@
     el afán de tener un lugar donde escribir y trastear con tecnologías web. 
     Por el momento, soy el único administrador de este sítio y asimismo 
     único creador de contenido —a pesar de haber implementado un sencillo 
-    —pero efectivo— sistema de usuarios 😓—.
+    —pero efectivo— sistema de usuarios—.
 </p>
 
 <p>
