--- a/public/pages/common/donaciones.html
+++ b/public/pages/common/donaciones.html
@@ -21,5 +21,5 @@
 <p>
     También puedes darme una propina con 
     <a href="https://brave.com/es/brave-rewards/">Barve Rewards</a>, este es 
-    un sítio verificado.
+    un sitio verificado.
 </p>
